--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "css-loader": "^6.6.0",
     "gh-pages": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.44.3",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.2.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
